# phind-cli

./: LICENSE  README.md
cli/: Cargo.toml
cli/src/: main.rs
