[package]
name = "cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
scraper = "0.16"
tokio = { version = "1", features = ["full"] }
prettytable-rs = "0.8.0"
html-entities = "0.1.0"
url = "2.2"
